# avatar-facial-landmark-detection

./: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  face_landmark_detection.cpp  face_landmark_detection_dlib_of.cpp  face_landmark_detection_dlib_of_kf_mixed.cpp  face_landmark_detection_dlib_of_kf_seperate.cpp  face_landmark_detection_kalman2.cpp  face_landmark_detection_kalman68.cpp  face_landmark_detection_kf_1.cpp  face_landmark_detection_kf_2.cpp  face_landmark_detection_kf_68.cpp  face_landmark_detection_of_dlib.cpp  face_landmark_detection_of_km.cpp  face_landmark_detection_of_km_dlib.cpp
